# neritigen

./: Cargo.toml  README.md
neritigen/: Cargo.toml
neritigen/src/: input.rs  main.rs  player.rs
ng_render/: Cargo.toml
ng_render/shaders/: fullscreen.vert  lighting.frag  tonemapping.frag  triangle-shadow.frag  triangle.frag  triangle.vert  volumetric-far-cap.frag  volumetric.frag  volumetric.vert
ng_render/src/: geometry.rs  guard.rs  image.rs  lib.rs  lighting.rs  renderer.rs  shared.rs  tonemapping.rs  util.rs
src/: main.rs
