[package]
name = "ng_render"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.32.1"
ash-window = "0.6.0"
crevice = "0.6.0"
log = "0.4.14"
mint = "0.5.6"
nalgebra = { version = "0.28.0", features = ["convert-mint"] }
scopeguard = "1.1.0"
thiserror = "1.0.25"
vk-shader-macros = "0.2.7"
winit = "0.25.0"
